# TTS-LAB

./: .dockerignore  .env.example  .gitignore  ARTHUR_IMAGE_LAB_REFERENCE.md  BENCHMARK_RESULTS_2026-04-20_RTX5060Ti.md  BENCHMARK_RESULTS_2026-04-23.md  CLAUDE.md  GPU_QA_REFERENCE.md  GPU_UPGRADE_ANALYSIS.md  IDEOGRAM4_API_REFERENCE.md  IDEOGRAM4_API_REFERENCE_V2.md  IDEOGRAM4_FIX_2026-06-10.md  IDEOGRAM4_OPTIMIZATIONS.md  IDEOGRAM4_VRAM_FIX.md  IMAGE_LAB_API_REFERENCE.md  KNOWN_ISSUES.md  LICENSE  Makefile  PERSIAN_TTS_MODELS.md  README.md  SESSION_2026-03-26_DEPLOY_AND_STABILITY.md  SESSION_2026-03-26_NEW_ENGINES.md  SESSION_2026-03-29_TWILIO_BRIDGE_AND_STT_FIXES.md  SESSION_2026-04-02_STT_CONFERENCE_RECORDING.md  SESSION_2026-04-21_TESTING_FISHSPEECH_INDEXTTS.md  SESSION_2026-04-22_GPU_FLASH_ATTN.md  SESSION_2026-04-23_QWEN3TTS_UI_UPGRADE.md  SESSION_2026-04-25_FIX2_INDEXTTS_QWEN3TTS.md  SESSION_2026-05-25_SD35_NVFP4_FIX.md  SESSION_SUMMARY.md  Switch-GPUtoVM.ps1  TTS_MODEL_COMPARISON.md  TTS_MODEL_COMPARISON2.md  VM_SETUP_REFERENCE.md  _arthur.service  _bench_ig4.py  _cache_qwen.py  _check_status.py  _remote_install_new_engines.sh  _run_full_bench.sh  (+67 more)
.claude/: settings.json
ansible/: inventory.yml  site.yml
archive/: _check_fails.py  _check_fish.py  _check_gated.py  _check_indextts.py  _check_numpy.py  _patch_fishspeech.py  _patch_fishsynth.py  _status.py  _test_csm.py  _test_fish.py  _trace_indextts.py  _write_tts_lab_entry.py  arthur_server.py  check_errors.sh  deploy_tts_lab.ps1  svc_test.py  test_parler.py
docker/: Dockerfile.base  Dockerfile.base-py311  (+14 more)
(+85 files in other folders)
